--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^5.0.2",
     "component": "^1.1.0",
     "cors": "^2.8.5",
+    "firebase": "^8.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
