--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "react-route": "^1.0.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "router": "^1.3.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
